change css style, hangedate format

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,14 +1,9 @@
-[filtering-for]
-  other = "Filtering for"
+filtering-for = "Filtering for"
 
-[no-posts]
-  other = "No posts yet"
+no-posts = "No posts yet"
 
-[email-subject]
-  other = "Reply to "
+email-subject = "Reply to "
 
-[email-reply]
-  other = "Reply to this post by email"
+email-reply = "Reply to this post by email"
 
-[skip-link]
-  other = "Skip to main content"
+skip-link = "Skip to main content"
